--- a/ClientContactViews/ContactInfoBox.xaml
+++ b/ClientContactViews/ContactInfoBox.xaml
@@ -233,7 +233,7 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Button Content="Save changes"/>
+                <Button Content="Save changes" Command="{Binding SaveChanges}"/>
                 <Button Content="Cancel"  Command="{Binding CancelChanges}" Grid.Column="1"/>
                 <Button Content="Edit Contact" Command="{Binding EditContact}" Visibility="{Binding EditContactButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Grid.ColumnSpan="2"/>
             </Grid>
