--- a/ClientContactViews/ContactInfoBox.xaml
+++ b/ClientContactViews/ContactInfoBox.xaml
@@ -161,7 +161,6 @@
                     Grid.RowSpan="2" Width="60" Style="{StaticResource image}" ToolTip="Contact Name" Source=".\res\user.png"/>
             <TextBox Grid.Row="1" x:Name="contactName" IsReadOnly="{Binding IsContactNameReadOnly}" Grid.Column="2" Grid.ColumnSpan="5" Text="{Binding contactName}" Style="{StaticResource textBox}"/>
 
-
             <DockPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="7">
                 <Label DockPanel.Dock="Top" Content="{Binding ContactNameValidationsText}" Visibility="{Binding ContactNameValidationsVisible, Converter={StaticResource BoolToVisibilityColapsedConverter}}" />
 
@@ -193,7 +192,7 @@
                               ItemsSource="{Binding locationsSource}"
                               ItemTemplate="{StaticResource LocationComboBoxItemTemplate}"
                     />
-                    
+
                 </Grid>
                 <Grid DockPanel.Dock="Top" Height="40">
                     <Grid.ColumnDefinitions>
@@ -220,24 +219,23 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Image  Grid.Column="0" Style="{StaticResource image}" ToolTip="Additional Notes Or Comments" Source=".\res\comment.png"/>
-                    <ScrollViewer Grid.Column="1" MinHeight="100"
+                    <ScrollViewer Grid.Column="1" Height="100"
                           VerticalScrollBarVisibility="Auto" Margin="0,1,1,1">
                         <TextBox x:Name="comments" IsReadOnly="{Binding AreCommentsReadOnly}" AcceptsReturn="True" Text="{Binding Comments}" TextWrapping="Wrap" SpellCheck.IsEnabled="True" Margin="0" VerticalContentAlignment="Top" Style="{StaticResource textBox}"/>
                     </ScrollViewer>
                 </Grid>
-
-                
+                <Label DockPanel.Dock="Bottom" Content="{Binding CommentsValidationsText}"   Visibility="{Binding CommentsValidationsVisible, Converter={StaticResource BoolToVisibilityColapsedConverter}}"/>
             </DockPanel>
             <Grid Grid.Row="3" Grid.ColumnSpan="7">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
                 <Button Content="Save changes" Command="{Binding SaveChanges}"/>
                 <Button Content="Cancel"  Command="{Binding CancelChanges}" Grid.Column="1"/>
+
                 <Button Content="Edit Contact" Command="{Binding EditContact}" Visibility="{Binding EditContactButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Grid.ColumnSpan="2"/>
             </Grid>
-
         </Grid>
     </Grid>
 
