--- a/ClientContactViews/ExpandableMenuButtons.xaml
+++ b/ClientContactViews/ExpandableMenuButtons.xaml
@@ -135,7 +135,10 @@
         </Button>
         <Button x:Name="button" Style="{StaticResource menuBtn}"
                 Opacity="0"
-                ToolTip="Add New Contact">
+                ToolTip="Add New Contact"
+                Command="{Binding Path=DataContext.AddNewContact, ElementName=ListView}"
+                CommandParameter="{Binding Path=DataContext.Name, RelativeSource={RelativeSource AncestorType={x:Type GroupItem}}}"
+                >
             <Grid>
                 <Image Source="res/add user.png"/>
             </Grid>
