--- a/ClientContactViews/ContactInfoBox.xaml
+++ b/ClientContactViews/ContactInfoBox.xaml
@@ -32,11 +32,11 @@
         </Style>
 
         <DataTemplate x:Key="LocationComboBoxItemTemplate">
-            <ComboBoxItem Content="{Binding locationName}"/>
+            <Label Content="{Binding locationName}"/>
         </DataTemplate>
         
         <DataTemplate x:Key="OrganisationComboBoxItemTemplate">
-            <ComboBoxItem Content="{Binding organisationName}"/>
+            <Label Content="{Binding organisationName}"/>
         </DataTemplate>
         
         <Style TargetType="ComboBox" >
@@ -49,7 +49,8 @@
             <Setter Property="Padding" Value="4" />
             <Setter Property="Margin" Value="0,2,2,2" />
         </Style>
-
+        
+        
         <Style x:Key="textBox" TargetType="{x:Type TextBox}">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
