--- a/ClientContactViews/res/styles/ContactInfoBoxStyles.xaml
+++ b/ClientContactViews/res/styles/ContactInfoBoxStyles.xaml
@@ -7,6 +7,7 @@
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Colours.xaml"/>
+        <ResourceDictionary Source="DefaultStyles.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -31,56 +32,17 @@
         <Label Content="{Binding organisationName}"/>
     </DataTemplate>
 
-    <Style x:Key="ComboBox" TargetType="ComboBox" >
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="Height" Value="Auto"/>
-        <Setter Property="Width" Value="Auto"/>
+
+
+    <Style x:Key="ComboBox" TargetType="ComboBox" BasedOn="{StaticResource defaultComboBoxStyle}">
         <Setter Property="Grid.ColumnSpan" Value="6"/>
         <Setter Property="Grid.Column" Value="1"/>
-        <Setter Property="Padding" Value="4" />
         <Setter Property="Margin" Value="0,2,2,2" />
     </Style>
-
-
-    <Style x:Key="textBox" TargetType="{x:Type TextBox}">
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="TextWrapping" Value="Wrap"/>
-        <Setter Property="Height" Value="Auto"/>
-        <Setter Property="Width" Value="Auto"/>
+    <Style x:Key="customTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource defaultTextBoxStyle}">
+        <Setter Property="Margin" Value="0,2,2,2" />
         <Setter Property="Grid.ColumnSpan" Value="6"/>
         <Setter Property="Grid.Column" Value="1"/>
-        <Setter Property="Padding" Value="4" />
-        <Setter Property="Margin" Value="0,2,2,2" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="BorderBrush" Value="{StaticResource darker}"/>
-
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="TextBox">
-                    <Border Name="Bd" BorderThickness="{TemplateBinding BorderThickness}" 
-                                             BorderBrush="{TemplateBinding BorderBrush}" 
-                                             Background="{TemplateBinding Background}" 
-                                             SnapsToDevicePixels="true">
-                        <Grid>
-                            <ScrollViewer Name="PART_ContentHost" Background="{TemplateBinding Background}" 
-                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                        </Grid>
-
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsReadOnly" Value="True">
-                            <Setter Property="Background" Value="{StaticResource readOnlyTextBoxBackground}"  />
-                            <Setter Property="Foreground" Value="Black"  />
-                            <Setter Property="BorderThickness" Value="1"/>
-                            <Setter Property="BorderBrush" Value="Transparent" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-
     </Style>
 
 
