Display LocationPopup validations on screen

--- a/ClientContactViews/LocationPopup.xaml
+++ b/ClientContactViews/LocationPopup.xaml
@@ -51,6 +51,7 @@
                      ToolTip="ds" 
                      Text="{Binding LocationText, Mode=TwoWay}"
                      Style="{StaticResource defaultTextBoxStyle}"/>
+            <Label Content="{Binding locationValidations}"/>
         </StackPanel>
         
         <Grid Grid.Row="1">
